--- a/Sideloader/Sideloader.csproj
+++ b/Sideloader/Sideloader.csproj
@@ -95,9 +95,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ExtensibleSaveFormat\ExtensibleSaveFormat.csproj">
+    <ProjectReference Include="..\KK_ExtensibleSaveFormat\KK_ExtensibleSaveFormat.csproj">
       <Project>{8ebe81b9-9ed9-466d-864a-4c644bfd8827}</Project>
-      <Name>ExtensibleSaveFormat</Name>
+      <Name>KK_ExtensibleSaveFormat</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\KK_ResourceRedirector\KK_ResourceRedirector.csproj">
