--- a/KK_Sideloader/KK_Sideloader.csproj
+++ b/KK_Sideloader/KK_Sideloader.csproj
@@ -14,17 +14,17 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Mono|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\bin\BepInEx\plugins\BepisPlugins\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;KK</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <OutputPath>..\bin\BepInEx\plugins\BepisPlugins\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;KK</DefineConstants>
     <Optimize>false</Optimize>
     <DebugType>none</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -79,19 +79,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AutoResolver\Hooks.cs" />
-    <Compile Include="AutoResolver\ResolveInfo.cs" />
-    <Compile Include="AutoResolver\StructReference.cs" />
-    <Compile Include="AutoResolver\StructValue.cs" />
-    <Compile Include="AutoResolver\StudioObjectSearch.cs" />
-    <Compile Include="AutoResolver\UniversalAutoResolver.cs" />
-    <Compile Include="BundleManager.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="Hooks.cs" />
-    <Compile Include="Lazy.cs" />
-    <Compile Include="Manifest.cs" />
-    <Compile Include="ManifestVersionComparer.cs" />
-    <Compile Include="Sideloader.cs" />
+    <Compile Include="AutoResolver\KK.UAR.Hooks.cs" />
+    <Compile Include="AutoResolver\KK.UAR.StudioResolveInfo.cs" />
+    <Compile Include="AutoResolver\KK.UAR.StudioObjectSearch.cs" />
+    <Compile Include="AutoResolver\KK.UAR.cs" />
+    <Compile Include="KK.Sideloader.Hooks.cs" />
+    <Compile Include="KK.Sideloader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -106,12 +99,9 @@
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="lib\I18N.dll" />
-    <None Include="lib\I18N.West.dll" />
-    <None Include="lib\ICSharpCode.SharpZipLib.dll" />
-  </ItemGroup>
   <Import Project="..\Shared\Shared.projitems" Label="Shared" />
+  <Import Project="..\Core_Sideloader\Core_Sideloader.projitems" Label="Shared" />
+  <Import Project="..\Shared.Lazy\Shared.Lazy.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>IF EXIST $(SolutionDir)PostBuild.bat CALL "$(SolutionDir)PostBuild.bat" $(TargetPath) KK
