--- a/KK_BGMLoader/KK_BGMLoader.csproj
+++ b/KK_BGMLoader/KK_BGMLoader.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BGMLoader</RootNamespace>
-    <AssemblyName>BGMLoader</AssemblyName>
+    <AssemblyName>KK_BGMLoader</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
