--- a/KK_ColorCorrector/KK_ColorCorrector.csproj
+++ b/KK_ColorCorrector/KK_ColorCorrector.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ColorCorrector</RootNamespace>
-    <AssemblyName>ColorCorrector</AssemblyName>
+    <AssemblyName>KK_ColorCorrector</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
