--- a/KK_InputUnlocker/KK_InputUnlocker.csproj
+++ b/KK_InputUnlocker/KK_InputUnlocker.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>InputUnlocker</RootNamespace>
-    <AssemblyName>InputUnlocker</AssemblyName>
+    <AssemblyName>KK_InputUnlocker</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
