--- a/KK_Screencap/KK_Screencap.csproj
+++ b/KK_Screencap/KK_Screencap.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Screencap</RootNamespace>
-    <AssemblyName>Screencap</AssemblyName>
+    <AssemblyName>KK_Screencap</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
