--- a/EC_ExtensibleSaveFormat/EC_ExtensibleSaveFormat.csproj
+++ b/EC_ExtensibleSaveFormat/EC_ExtensibleSaveFormat.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{747A4E61-34F4-4790-A418-BB2CB03450E3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EC_ExtensibleSaveFormat</RootNamespace>
+    <RootNamespace>ExtensibleSaveFormat</RootNamespace>
     <AssemblyName>EC_ExtensibleSaveFormat</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
