--- a/EC_Screencap/EC_Screencap.csproj
+++ b/EC_Screencap/EC_Screencap.csproj
@@ -51,6 +51,10 @@
       <HintPath>..\lib\BepInEx5\BepInEx.Harmony.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="IL">
+      <HintPath>..\lib\EmotionCreators\IL.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
